--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "json2csv": "^6.0.0-alpha.2",
     "pg": "^8.11.3",
+    "pg-format": "^1.0.4",
     "xlsx": "^0.18.5"
   }
 }
